--- a/src/client/routes/Checkout/assets/CheckoutView.scss
+++ b/src/client/routes/Checkout/assets/CheckoutView.scss
@@ -70,3 +70,17 @@
         max-width: 150px !important;
     }
 }
+.block-title {
+    font-size: 40px;
+    line-height: 50px;
+    font-weight: 500;
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%)
+}
+@media only screen and (max-width: 400px) {
+    .block-title {
+        font-size: 35px !important;
+        line-height: 35px !important;
+    }
+}
