--- a/src/client/routes/Compare/assets/CompareView.scss
+++ b/src/client/routes/Compare/assets/CompareView.scss
@@ -59,3 +59,15 @@
         }
     }
 }
+.block-title {
+    font-size: 50px;
+    line-height: 50px;
+    font-weight: 500;
+}
+@media only screen and (max-width: 400px) {
+    .block-title {
+        font-size: 35px !important;
+        line-height: 35px !important;
+    }
+}
+
