--- a/src/client/routes/ContactUs/assets/ContactUsView.scss
+++ b/src/client/routes/ContactUs/assets/ContactUsView.scss
@@ -9,3 +9,17 @@
     
     padding: 78px;
 }
+.block-title {
+    font-size: 40px;
+    line-height: 50px;
+    font-weight: 500;
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%)
+}
+@media only screen and (max-width: 400px) {
+    .block-title {
+        font-size: 35px !important;
+        line-height: 35px !important;
+    }
+}
