--- a/src/client/layouts/PageLayout/PageLayout.scss
+++ b/src/client/layouts/PageLayout/PageLayout.scss
@@ -5,6 +5,9 @@
 #footerBlock .ui.menu .item {
     padding: 0.3em !important;
 }
+#footerBlock{
+    margin-top:3em;
+}
 
 @media only screen and (max-width: 400px) {
     #headerBlock .ui.menu .item {
