--- a/src/client/routes/Home/assets/HomeView.scss
+++ b/src/client/routes/Home/assets/HomeView.scss
@@ -300,6 +300,11 @@
         top:30px;
     }
 }
+.seo-text{
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+}
 .description-vpn{
     margin-top:45px;
     font-size:30px;
