--- a/src/client/routes/Vpn/assets/VpnView.scss
+++ b/src/client/routes/Vpn/assets/VpnView.scss
@@ -9,6 +9,7 @@
     font-size: 50px;
     line-height: 50px;
     font-weight: 500;
+    margin-top:50px;
 }
 @media only screen and (max-width: 400px) {
     .block-title {
