social networks commit

--- a/src/client/layouts/PageLayout/PageLayout.scss
+++ b/src/client/layouts/PageLayout/PageLayout.scss
@@ -1,12 +1,29 @@
 #headerBlock {
     background-color: #FE3E3C;
 }
+#footerBlock .right-block {
+   text-align:right;
+   font-weight:normal;
+}
 
 #footerBlock .ui.menu .item {
     padding: 0.3em !important;
 }
 #footerBlock{
     margin-top:3em;
+}
+.stayCont{
+    color:#fe3e3c;
+  left:50%;
+    width:130px;
+   position:absolute;
+   top:50%;
+   transform: translate(-50%, -50%);
+}
+.iconsLink{
+    width:25px;
+    height:25px;
+    cursor:pointer;
 }
 
 @media only screen and (max-width: 400px) {
@@ -25,4 +42,10 @@
     #footerBlock .ui.menu .item {
         padding: initial !important;
     }
+}
+.iconsFooter{
+    color:#fe3e3c;
+    font-size:25px;
+    margin-left:10px;
+    cursor:pointer;
 }
