--- a/src/client/routes/Vpn/assets/VpnView.scss
+++ b/src/client/routes/Vpn/assets/VpnView.scss
@@ -23,3 +23,8 @@
     left:50%;
     transform:translate(-50%);
 }
+.pTextVpn{
+    font-size: 1.71428571rem;
+    font-weight: 700;
+    text-align:center;
+}
