--- a/src/client/routes/Checkout/assets/CheckoutView.scss
+++ b/src/client/routes/Checkout/assets/CheckoutView.scss
@@ -70,7 +70,7 @@
         max-width: 150px !important;
     }
 }
-.block-title {
+.block-title-checkout {
     font-size: 40px;
     line-height: 50px;
     font-weight: 500;
