--- a/src/client/routes/ContactUs/assets/ContactUsView.scss
+++ b/src/client/routes/ContactUs/assets/ContactUsView.scss
@@ -6,8 +6,11 @@
     border: none;
     
     margin: auto;
-    
+    top:40px;
     padding: 78px;
+}
+.marginContackt{ 
+    top:90px;
 }
 .block-title {
     font-size: 40px;
@@ -22,7 +25,7 @@
     position:absolute;
     width:700px;
     z-index:3;
-    top:100px;
+    top:110px;
     left:50%;
     transform:translateX(-50%);
     text-align:center;
@@ -37,6 +40,20 @@
     .block-title2{
        display:none;
     }
+    #signinBlock{
+        top:0px;
+        padding:14px!important;
+        width:20em!important;
+    }
+
+}
+@media only screen and (max-width: 425px) {
+
+    #signinBlock{
+        padding:14px!important;
+        width:22em!important;
+    }
+
 }
 @media only screen and (max-width: 670px) {
     .block-title {
