--- a/src/client/routes/Vpn/assets/VpnView.scss
+++ b/src/client/routes/Vpn/assets/VpnView.scss
@@ -14,6 +14,9 @@
     font-weight: 500;
     margin-top:50px;
 }
+.vpn-main-seo-container{
+    padding-bottom:30px!important;
+}
 @media only screen and (max-width: 400px) {
     .block-title {
         font-size: 35px !important;
